--- a/frontend/plugin_ui.html
+++ b/frontend/plugin_ui.html
@@ -1,26 +1,64 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
     <head>
       <meta charset="utf-8">
-      <title>PhishTor</title>
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <title>PhishNet</title>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Russo+One" rel="stylesheet">
       <link href="plugin_ui.css" type="text/css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     </head>
     <body>
-      <div id="plugin_name">
-        <h1>PhishTor</h1>
+      <div class="main-container d-flex justify-content-center align-items-center min-vh-100">
+        <div class="phish-card shadow-lg p-4 rounded">
+          <!-- App Bar -->
+          <div class="app-bar d-flex justify-content-between align-items-center mb-3">
+            <span class="plugin-title">PhishNet</span>
+            <button class="settings-btn btn btn-link p-0" title="Settings" id="settingsBtn">
+              <i class="fa-solid fa-gear"></i>
+            </button>
+          </div>
+          <div class="subtitle text-center mb-4">AI-powered phishing detection for safer browsing</div>
+          <!-- Settings Modal -->
+          <div id="settingsModal" class="settings-modal" style="display:none;">
+            <div class="settings-modal-content">
+              <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="settings-title">Settings</span>
+                <button class="close-modal btn btn-link p-0" id="closeSettings" title="Close"><i class="fa-solid fa-xmark"></i></button>
+              </div>
+              <div class="form-group d-flex align-items-center">
+                <label for="darkModeToggle" class="mb-0 mr-2">Dark Mode</label>
+                <input type="checkbox" id="darkModeToggle">
+              </div>
+            </div>
+          </div>
+          <!-- Status Message -->
+          <div class="site-message text-center mb-3">
+            <div id="scoreCircle" class="score-circle score-safe">
+              <span id="site_score">76%</span>
+            </div>
+            <span>This site is pretty safe ngl :v</span>
+          </div>
+          <!-- Accordion: Risk Drivers -->
+          <div class="risk-drivers-card card mb-2">
+            <div class="card-header risk-header">
+              <span>Risk Drivers</span>
+            </div>
+            <!-- Optionally, keep a summary or top risk drivers here -->
+          </div>
+          <!-- Factors Badges -->
+          <div class="factors-section mb-3">
+            <div id="factorsBadges" class="feature-badges d-flex flex-wrap justify-content-center"></div>
+            <div class="feature-badges d-flex flex-wrap justify-content-center mt-2">
+              <a class="badge-feature badge-link" href="/test.html">View model test results</a>
+            </div>
+          </div>
+        </div>
       </div>
-      <h2 style="font-size: 20px">A Phishing detection plugin</h2>
-      <div class="rounded-circle" id="res-circle">
-        <h1 id="site_score">93%</h1>
-      </div>
-      <h2 id="site_msg">This website is safe to use :)</h2>
-      <ul id="features">
-      </ul>
-      <a href="/test.html">View model test results</a>
       <!-- <script src="features.js" type="text/javascript"></script> -->
       <script src="js/jquery.js" type="text/javascript"></script>
       <script src="js/plugin_ui.js" type="text/javascript"></script>
+      <script src="js/gauge.js" type="text/javascript"></script>
+      <script src="js/settings.js" type="text/javascript"></script>
     </body>
   </html>
