--- a/frontend/test.html
+++ b/frontend/test.html
@@ -1,9 +1,9 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Accuracy</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>PhishNet - Model Test Results</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Russo+One" rel="stylesheet">
     <link href="plugin_ui.css" type="text/css" rel="stylesheet">
     <script src="js/jquery.js" type="text/javascript"></script>
@@ -11,15 +11,26 @@
     <script src="js/test.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="plugin_name">
-      <h1>Results</h1>
+    <div class="main-container d-flex justify-content-center align-items-center min-vh-100">
+      <div class="phish-card shadow-lg p-4 rounded">
+        <div class="app-bar d-flex justify-content-between align-items-center mb-3">
+          <span class="plugin-title">PhishNet</span>
+        </div>
+        <div class="subtitle text-center mb-4">Model Test Results</div>
+        <div class="factors-section mb-3">
+          <div class="test-metrics text-center">
+            <div class="test-metric"><strong>Precision</strong>: <span id="precision">...</span></div>
+            <div class="test-metric"><strong>Recall</strong>: <span id="recall">...</span></div>
+            <div class="test-metric"><strong>F1 Score</strong>: <span id="accuracy">...</span></div>
+          </div>
+        </div>
+        <div class="feature-badges d-flex flex-wrap justify-content-center mt-2">
+          <a class="badge-feature badge-link" href="/plugin_ui.html">&larr; Back to Plugin</a>
+        </div>
+        <div class="text-center mt-3" style="font-size: 0.95em; color: #888;">
+          Calculated live from testing data
+        </div>
+      </div>
     </div>
-    <div style="padding: 2%;">
-      <p>Calculated live from testing data</p>
-      <strong>Precision: </strong><p id="precision"></p>
-      <strong>Recall: </strong><p id="recall"></p>
-      <strong>F1 score: </strong><p id="accuracy"></p>
-    </div>
-    <a href="/plugin_ui.html">Back</a>
   </body>
 </html>
